# agentic-rag-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/eval/: eval_set.jsonl
examples/kb/: dev.md  intro.md
reports/: step35_baseline.md
src/agentic_rag/: agent.py  eval.py  graph.py  indexer.py  kb.py  llm.py  main.py  rag.py  retriever.py
tests/: test_agent_mock.py  test_rag_smoke.py  test_smoke.py
