[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-lab"
version = "0.1.0"
description = "Agentic RAG playground (LangGraph-ready)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
openai = [
  "openai>=1.0",
]
gemini = [
  "google-genai>=0.3",
]
graph = [
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

dependencies = ["numpy>=1.23"]
