[project]
name = "agentic-rag-lab"
version = "0.1.0"
description = "Agentic RAG playground (LangGraph-ready)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
openai = [
  "openai>=1.0",
]
gemini = [
  "google-genai>=0.3",
]
graph = [
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
